[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/img/ent/enemies/ghost01.png" type="Texture" id=1]
[ext_resource path="res://src/ent/enemies/Ghost01.gd" type="Script" id=2]
[ext_resource path="res://res/img/light.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk_b"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_f"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_l"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_r"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 170, 170 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 16 )

[node name="Ghost01" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 2 )
dead_colour = Color( 0.568627, 0.560784, 0.564706, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/walk_b = SubResource( 2 )
anims/walk_f = SubResource( 3 )
anims/walk_l = SubResource( 4 )
anims/walk_r = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="DangerZone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
energy = 0.5

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 8 )

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="body_entered" from="DangerZone" to="." method="_on_DangerZone_body_entered"]
[connection signal="body_exited" from="DangerZone" to="." method="_on_DangerZone_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
